tests/snapshots/integration__integration_tests__approval_ui__approval_named_commands.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----
❌ [31mCannot prompt for approval in non-interactive environment[0m

💡 [2mIn CI/CD, use --force to skip prompts. To pre-approve commands, use 'wt config approvals add'[0m

----- stderr -----
🟡 [33m[1m[33mtest-repo[0m[33m needs approval to execute [1m[33m3[0m[33m commands:[0m

⚪ post-create [1minstall[0m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Installing dependencies...'[0m[2m[0m

⚪ post-create [1mbuild[0m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Building project...'[0m[2m[0m

⚪ post-create [1mtest[0m:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Running tests...'[0m[2m[0m
